--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,60 @@
-/* You can add global styles to this file, and also import other style files */
+html, body {
+  width: 100%;
+  height: 100%;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+}
+
+.cards {
+  justify-content: center;
+}
+
+.card {
+  margin: 10px;
+  width: 10em;
+  text-align: center;
+}
+
+.btn_milieu{
+  margin-left: 0.1%;
+  margin-right: 0.1%;
+}
+
+.cards .creer_bouton {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.card-footer {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.card-footer a {
+  margin-bottom: 10px;
+  display: flex;
+  justify-content: center;
+}
+
+.pres-card div h5 {
+  text-align: center;
+}
+
+
+.row {
+  justify-content: center;
+}
+
+.accueil {
+  align-self: center;
+  text-align: center;
+}
+
+.accueil h1 {
+  text-decoration: underline;
+  margin-bottom: 10%;
+  margin-top: 15%;
+}
